--- a/bibliography.bib
+++ b/bibliography.bib
@@ -86,9 +86,7 @@
   year      = {2018},
   edition   = {4th ed.},
   volume    = {5},
-  booktitle = {Stevens' Handbook of Experimental Psychology and Cognitive Neuroscience},
-  doi       = {10.1002/9781119170174.epcn506},
-  url       = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9781119170174.epcn506},
+  booktitle = {Stevens' Handbook of Experimental Psychology and Cognitive Neuroscience}
 }
 
 @InBook{Batchelder1986,
@@ -110,9 +108,7 @@
   issn    = {0033-3123},
   number  = {1},
   pages   = {71-92},
-  volume  = {53},
-  doi     = {10.1007/bf02294195},
-  url     = {https://dx.doi.org/10.1007/BF02294195},
+  volume  = {53}
 }
 
 @InBook{Batchelder2010,
@@ -314,8 +310,7 @@
   issn    = {1939-1471(Electronic),0033-295X(Print)},
   number  = {1},
   pages   = {61--79},
-  volume  = {70},
-  doi     = {10.1037/h0039723},
+  volume  = {70}
 }
 
 @Article{Hsu2015,
@@ -339,8 +334,7 @@
   issn    = {1939-1471(Electronic),0033-295X(Print)},
   number  = {3},
   pages   = {308-324},
-  volume  = {76},
-  doi     = {10.1037/h0027238},
+  volume  = {76}
 }
 ﻿
 
